fixed bug: blur background image in safari has a wrong size
fixed it by turning 100% height to specified 700px height of background
image.

--- a/example/demo2/personalPage.css
+++ b/example/demo2/personalPage.css
@@ -1,6 +1,6 @@
 .personal-page {
     background-image: url(img/me.png);
-    background-size: auto 100%;
+    background-size: auto 700px;
     background-position: center top;
 }
 
@@ -34,7 +34,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.25)
+  background: rgba(0, 0, 0, 0.25);
 }
 .blur-text > h1 {
   margin: 0 0 0 -180px;
